[gd_scene load_steps=8 format=3 uid="uid://3o6i128siadi"]

[ext_resource type="Script" path="res://main.gd" id="1_ou1jb"]
[ext_resource type="PackedScene" uid="uid://bh0llvtt314wb" path="res://adventure_player.tscn" id="2_kr5hq"]
[ext_resource type="PackedScene" uid="uid://b370gslfjefx0" path="res://floor.tscn" id="4_k13l2"]
[ext_resource type="PackedScene" uid="uid://cp86mgg3bxtti" path="res://beast_player.tscn" id="4_w2aus"]
[ext_resource type="PackedScene" uid="uid://dvm5cjkf5qq30" path="res://hud.tscn" id="6_l8uoq"]
[ext_resource type="PackedScene" uid="uid://j7hwpjcjukoh" path="res://obstacle.tscn" id="6_nssqh"]

[sub_resource type="Curve2D" id="Curve2D_jkf18"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 416, 0, 0, 0, 0, 0, 352, 0, 0, 0, 0, 0, 288, 0, 0, 0, 0, 0, 224)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_ou1jb")
obstacle_scene = ExtResource("6_nssqh")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 336)

[node name="Floor" parent="." instance=ExtResource("4_k13l2")]
position = Vector2(576, 576)

[node name="Ceiling" parent="." instance=ExtResource("4_k13l2")]
position = Vector2(576, 56)

[node name="Adventure Player" parent="." instance=ExtResource("2_kr5hq")]
position = Vector2(600, 400)
scale = Vector2(0.75, 0.75)

[node name="Beast Player" parent="." instance=ExtResource("4_w2aus")]
position = Vector2(920, 400)
scale = Vector2(0.65, 0.65)

[node name="ObstacleTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="ObstaclePath" type="Path2D" parent="."]
position = Vector2(-56, 32)
scale = Vector2(0.12931, 1)
curve = SubResource("Curve2D_jkf18")
metadata/_edit_group_ = true

[node name="ObstacleSpawnLocation" type="PathFollow2D" parent="ObstaclePath"]
position = Vector2(0, 480)
rotation = -1.5708

[node name="Hud" parent="." instance=ExtResource("6_l8uoq")]

[connection signal="attack" from="Beast Player" to="." method="_beast_player_win"]
[connection signal="lost" from="Beast Player" to="." method="_adventure_player_win"]
[connection signal="timeout" from="ObstacleTimer" to="." method="_on_obstacle_timer_timeout"]
[connection signal="start_game" from="Hud" to="." method="_on_hud_start_game"]
